Minor layout adjustment and fixed Copilotkit wrapping and pop-up client

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 html,
 body {
   scroll-behavior: smooth !important;
+  height: 100%;
 }
 
 /* It makes the HTML progress bar filling smooth when value change. */
